--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
  <body class="root">
   <header class="header">
-
+    <img class="header__logo" src="./images/header/header-logo.svg" alt="Здесь логотип сайта">
+    <div class="header__lang-link">
+      <a class="header__lang-link_lang-ru" href="#" lang="en">Ru</a>
+      <a class="header__lang-link_lang-ru" href="#" lang="en">En</a>
+    </div>
   </header>
 
   <main>
