--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <img class="header__logo" src="./images/header/header-logo.svg" alt="Здесь логотип сайта">
     <div class="header__lang-link">
       <a class="header__lang-link_lang-ru" href="#" lang="en">Ru</a>
-      <a class="header__lang-link_lang-ru" href="#" lang="en">En</a>
+      <a class="header__lang-link_lang-en" href="#" lang="en">En</a>
     </div>
   </header>
 
   <main>
     <section class="lead">
-
+      <h1 class="lead__title">Путешествия по России</h1>
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+      <img class="lead__image" src="./images/lead/lead-polka.jpg" alt="Карта маршрута Псков - Улан-Уде">
+      <p class="lead__caption">ваша полка — верхняя</p>
     </section>
 
     <section class="intro">
