--- a/index.html
+++ b/index.html
@@ -10,26 +10,46 @@
  <body class="root">
   <header class="header">
     <img class="header__logo" src="./images/header/header-logo.svg" alt="Здесь логотип сайта">
-    <div class="header__lang-link">
-      <a class="header__lang-link_lang-ru" href="#" lang="en">Ru</a>
-      <a class="header__lang-link_lang-en" href="#" lang="en">En</a>
+    <div class="header__links">
+      <a class="header__link-ru" href="#" lang="en">Ru</a>
+      <a class="header__link-en" href="#" lang="en">En</a>
     </div>
   </header>
 
-  <main>
+  <!-- <main class="content">
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
-      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img class="lead__image" src="./images/lead/lead-polka.jpg" alt="Карта маршрута Псков - Улан-Уде">
-      <p class="lead__caption">ваша полка — верхняя</p>
-    </section>
-
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p> 
+      <img class="lead__image" src="./images/lead/lead-polka.jpg" alt="Карта маршрута Псков - Улан-Уде"> -->
+      <!--
+      <p class="lead__caption">ваша полка — верхняя</p> 
+    </section> -->
+<!-- 
     <section class="intro">
-
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+      <ul class="intro__list">
+        <li>Часовых поясов 11</li>
+        <li>Объектов природного наследия ЮНЕСКО 12</li>
+        <li>Объектов культурного наследия ЮНЕСКО 16</li>
+        <li>Природных заповедников 105</li>
+        <li>Аэропортов 241</li>
+      </ul>
     </section>
 
     <section class="photo-grid">
-
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-train.jpg" alt="Поезд">
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Облачные горы">
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман в поле">
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-sochi.jpg" alt="Туман в лесу">
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-arisa.jpg" alt="Машина на льду">
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-baikal.jpg" alt="Красивый берег">
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Снежные вершины">
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Пешеходный переход">
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Туманные холмы">
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Предгорья">
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Утёс">
+      <img class="photo-grid__item" src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Туман на плато">
     </section>
 
     <section class="places">
@@ -38,11 +58,11 @@
 
     <section class="cover">
 
-    </section> 
+    </section>  -->
   </main>
 
-  <footer class="footer">
+  <!-- <footer class="footer">
 
-  </footer>
+  </footer> -->
  </body> 
 </html>
