--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <img class="place__image" src="./images/place/place-kosa.jpg" alt="Куршская коса">
         <div class="place__website">
           <p class="place__url-heading" lang="en">URL</p>
-          <a class="place__link" href="#" lang="en" target="_blank">park-kosa.ru</a>
+          <a class="place__link" href="http://park-kosa.ru" lang="en" target="_blank">park-kosa.ru</a>
         </div>
         <div class="place__text">
           <p class= "place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -71,7 +71,7 @@
         <img class="place__image" src="./images/place/place-kolsky.jpg" alt="Кольский">
         <div class="place__website">
           <p class="place__url-heading" lang="en">URL</p>
-          <a class="place__link" href="#" lang="en" target="_blank">National Geographic</a>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" lang="en" target="_blank">National Geographic</a>
         </div>
         <div class="place__text">
           <p class= "place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -85,7 +85,7 @@
         <img class="place__image" src="./images/place/place-altai.jpg" alt="Алтай">
         <div class="place__website">
           <p class="place__url-heading" lang="en">URL</p>
-          <a class="place__link" href="#" lang="en" target="_blank">Facebook</a>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" lang="en" target="_blank">Facebook</a>
         </div>
         <div class="place__text">
           <p class= "place__paragraph">Алтай — одно из красивейших мест в России. 
@@ -98,7 +98,7 @@
         <img class="place__image" src="./images/place/place-winter-baikal.jpg" alt="Байкал зимой">
         <div class="place__website">
           <p class="place__url-heading" lang="en">URL</p>
-          <a class="place__link" href="#" lang="en" target="_blank">https://vk.com/baikalmile</a>
+          <a class="place__link" href="https://vk.com/baikalmile" lang="en" target="_blank">https://vk.com/baikalmile</a>
         </div>
         <div class="place__text">
         <p class= "place__paragraph">Всем известен Байкал как крупнейшее озеро 
@@ -112,7 +112,7 @@
         <img class="place__image" src="./images/place/place-karelia.jpg" alt="Карелия">
         <div class="place__website">
           <p class="place__url-heading" lang="en">URL</p>
-          <a class="place__link" href="#" lang="en" target="_blank">http://vodlozero.ru/</a>
+          <a class="place__link" href="http://vodlozero.ru" lang="en" target="_blank">http://vodlozero.ru/</a>
         </div>
         <div class="place__text">
         <p class= "place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
@@ -121,10 +121,14 @@
         </div>
       </div>
     </section>
-<!--
-    <section class="cover">
 
-    </section>  -->
+    <section class="cover">
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="__blank">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        <div class="cover__background-image"></div>
+      </a>
+    </section>
   </main>
 
   <!-- <footer class="footer">
