--- a/index.html
+++ b/index.html
@@ -131,8 +131,15 @@
     </section>
   </main>
 
-  <!-- <footer class="footer">
-
-  </footer> -->
+  <footer class="footer">
+    <nav class="footer__links">
+      <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+      <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+      <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+      <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+      <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+    </nav>
+    <p class="footer__author">&copy; 2020. Андрей Красман</p>
+  </footer> 
  </body> 
 </html>
