--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pages/index.css">
-  <title></title>
+  <title>Путешествие по России</title>
  </head>
 
  <body class="root">
   <header class="header">
     <img class="header__logo" src="./images/header/header-logo.svg" alt="Здесь логотип сайта">
     <div class="header__links">
-      <a class="header__link-ru" href="#" lang="en">Ru</a>
+      <a class="header__link-ru header__link_active" href="#" lang="en">Ru</a>
       <a class="header__link-en" href="#" lang="en">En</a>
     </div>
   </header>
@@ -123,7 +123,7 @@
     </section>
 
     <section class="cover">
-      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="__blank">
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         <div class="cover__background-image"></div>
