--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <header class="header">
     <img class="header__logo" src="./images/header/header-logo.svg" alt="Здесь логотип сайта">
     <div class="header__links">
-      <a class="header__link-ru header__link-ru_active" href="#" lang="en">Ru</a>
-      <a class="header__link-en" href="#" lang="en">En</a>
+      <a class="header__link header__link_active" href="#" lang="en">Ru</a>
+      <a class="header__link" href="#" lang="en">En</a>
     </div>
   </header>
 
